--- a/templates/default/category.html.twig
+++ b/templates/default/category.html.twig
@@ -1,10 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{% block body %}
-
-{% endblock %}
-
 {% block title %}
-
+    Categorie : {{ type }}
 {% endblock %}
 
+{% block body %}
+    {# Permet d'afficher les variables passé depuis mon controller. #}
+    <h1>Categorie : {{ type }}</h1>
+{% endblock %}
