correction page login et signup

--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -2,11 +2,8 @@
     <div class="logo">EventFlow</div>
     <ul class="nav-links">
         <li><a href="{{ path('default_home') }}">Accueil</a></li>
-        <li><a href="{{ path('default_home') }}">Accueil</a></li>
-        <li><a href="{{ path('default_home') }}">Accueil</a></li>
-        <li><a href="{{ path('default_home') }}">Accueil</a></li>
-        <li><a href="{{ path('default_home') }}">Accueil</a></li>
-
+        <li><a href="{{ path('default_login') }}">Connexion</a></li>
+        <li><a href="{{ path('default_inscription') }}">Inscription</a></li>
     </ul>
 </nav>
 <style>
