--- a/templates/default/login.html.twig
+++ b/templates/default/login.html.twig
@@ -17,6 +17,11 @@
         </div>
         <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
         <button type="submit" class="btn btn-primary">Login</button>
+         <div class="text-center mt-3">
+                        <p>Pas de compte ? 
+                           <a href="{{ path('default_inscription') }}">S'inscrire</a>
+                        </p>
+                    </div>
     </form>
 </div>
 {% endblock %}
